react hello world

--- a/views/index.haml
+++ b/views/index.haml
@@ -4,7 +4,6 @@
     %link{:rel => "stylesheet", :type => "text/css", :href => "/css/main.css"}
     %script(src="https://fb.me/react-0.14.6.min.js")
     %script(src="https://fb.me/react-dom-0.14.6.min.js")
+    %script(src="/app.js")
   %body
-    .section 
-      .col.span_4_of_8 Hello
-      .col.span_4_of_8 World
+    #react-root
