--- a/views/index.haml
+++ b/views/index.haml
@@ -4,6 +4,7 @@
     %link{:rel => "stylesheet", :type => "text/css", :href => "/css/main.css"}
     %script(src="https://fb.me/react-0.14.6.min.js")
     %script(src="https://fb.me/react-dom-0.14.6.min.js")
+    %script(src="//code.jquery.com/jquery-1.12.0.min.js")
     %script(src="/app.js")
   %body
     #react-root
