--- a/views/index.haml
+++ b/views/index.haml
@@ -2,9 +2,10 @@
 %html
   %head
     %link{:rel => "stylesheet", :type => "text/css", :href => "/css/main.css"}
+    %link{:rel => "stylesheet", :type => "text/css", :href => "/css/app.css"}
     %script(src="https://fb.me/react-0.14.6.min.js")
     %script(src="https://fb.me/react-dom-0.14.6.min.js")
-    %script(src="//code.jquery.com/jquery-1.12.0.min.js")
+    %script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js")
     %script(src="/app.js")
   %body
     #react-root
