--- a/views/index.haml
+++ b/views/index.haml
@@ -3,9 +3,13 @@
   %head
     %link{:rel => "stylesheet", :type => "text/css", :href => "/css/main.css"}
     %link{:rel => "stylesheet", :type => "text/css", :href => "/css/app.css"}
+    %link{:rel => "stylesheet", :type => "text/css", :href => "/css/font-awesome.min"}
     %script(src="https://fb.me/react-0.14.6.min.js")
     %script(src="https://fb.me/react-dom-0.14.6.min.js")
     %script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js")
     %script(src="/app.js")
   %body
-    #react-root
+    %p.heading
+      %span.title Dashboard
+      %span.subtitle Pipeline On-boarding
+      #react-root
