--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,8 @@
-p.heading {
+body {
   font-family: sans-serif;
+
+}
+p.heading {
   padding: 5px 0px 5px 0px;
   margin: 0px 10px 20px 10px;
   border-bottom: 1px solid #eee;
@@ -7,7 +10,6 @@ p.heading {
 
 p.heading span.title {
   font-size: 26px;
-  font-family: sans-serif;
   padding-left:5px;
 }
 
@@ -20,7 +22,6 @@ p.heading span.subtitle {
 
 h1.group-name {
   padding-left: 10px;
-  font-family: sans-serif;
   font-weight: 500;
   font-size: 20px;
 }
@@ -33,7 +34,6 @@ div.group {
 }
 
 div.pipeline {
-  font-family: sans-serif;
   word-wrap: break-word;
   border: 1px solid;
   padding: 5px 5px 5px 5px;
