Changing data shown by pipelines. Organized groups differently on page.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -28,8 +28,7 @@ h1.group-name {
 
 div.group {
   margin:10px 10px 0px 10px;
-  border: 1px solid;
-  border-color: grey;
+  border: 1px;
   border-radius: 5px;
 }
 
