--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,6 @@
 /*  SECTIONS  */
 .section {
+    width: 100%;
     clear: both;
     padding: 0px;
     margin: 0px;
@@ -17,7 +18,7 @@
 .group:before,
 .group:after { content:""; display:table; }
 .group:after { clear:both;}
-.group { zoom:1; /* For IE 6/7 */ }
+.group { display:inline-flex; zoom:1; /* For IE 6/7 */ }
 /*  GRID OF EIGHT  */
 .span_8_of_8 {
     width: 100%;
