--- a/public/css/app.css
+++ b/public/css/app.css
@@ -26,15 +26,30 @@ h1.group-name {
   font-size: 20px;
 }
 
-div.group {
-  margin:10px 10px 0px 10px;
-  border: 1px;
-  border-radius: 5px;
+div.row {
+  padding-top: 100px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
-div.pipeline {
-  word-wrap: break-word;
+div.col-sm-4 {
+  padding-left: 30px;
+  padding-bottom: 20px;
+}
+
+div.pipeline-group {
   border: 1px solid;
-  padding: 5px 5px 5px 5px;
-  border-radius: 4px;
+  border-radius: 5px;
+  padding-left: 10px;
+  padding-bottom: 20px;
+  text-align: center;
+}
+
+.pipeline-group h3 {
+    font-size: 20px;
+}
+
+div.info {
+  padding-top: 20px;
+  font-size: 20px;
 }
