--- a/views/index.haml
+++ b/views/index.haml
@@ -1,8 +1,8 @@
 !!!
 %html
   %head
-    %link{:rel => "stylesheet", :type => "text/css", :href => "/css/main.css"}
     %link{:rel => "stylesheet", :type => "text/css", :href => "/css/app.css"}
+    %link{:rel => "stylesheet", :type => "text/css", :href => "/css/bootstrap.min.css"}
     %link{:rel => "stylesheet", :type => "text/css", :href => "/css/font-awesome.min"}
     %script(src="https://fb.me/react-0.14.6.min.js")
     %script(src="https://fb.me/react-dom-0.14.6.min.js")
