Adds component inventory link

--- a/views/index.haml
+++ b/views/index.haml
@@ -12,4 +12,5 @@
     %p.heading
       %span.title Dashboard
       %span.subtitle Pipeline On-boarding
+      %a{ href: 'https://storedev-tools.corp.apple.com/confluence/display/AOSWebOpsTools/Pipeline+monitoring+inventory' } Component Inventory
       #react-root
